频道样式更新

--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -21,16 +21,12 @@
             <span class="input-group-addon">结束</span>
             <input type="datetime-local" class="form-control" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
         </div>
+        <div class="input-group">
+            <span class="input-group-addon">持续时间长</span>
+            <input type="number" class="form-control"  data-field="duration" value="<%=duration%>">
+        </div>
 
 
-
-        <label>
-            结束时间
-        </label>
-        <label>
-            持续时间
-        <input type="number" step="1" data-field="duration" value="<%=duration%>">
-        </label>
         <label class="channel-editor-program-trigger">
             <label class="timer-field timer-field-date">
                 <span></span>
