--- a/WEB-INF/templates/layout_table_row.html
+++ b/WEB-INF/templates/layout_table_row.html
@@ -1,6 +1,6 @@
 <tr data-layout-id="<%=id%>">
     <td style="width: 32px;"><input type="checkbox"></td>
-    <td><a href="#layout/edit?id=<%=id%>" class="btn-table-detail"><%=name%></a></td>
+    <td><b><a href="#layout/edit?id=<%=id%>" class="btn-table-detail"><%=name%></a></b></td>
     <td>宽:<%=width%></td>
     <td>高:<%=height%></td>
     <td>背景色:<%=background_color%></td>
