--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -22,7 +22,7 @@
             <input type="datetime-local" class="form-control" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
         </div>
         <div class="input-group">
-            <span class="input-group-addon">持续时间长</span>
+            <span class="input-group-addon">时长</span>
             <input type="number" class="form-control"  data-field="duration" value="<%=duration%>">
         </div>
 
