--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -258,19 +258,24 @@
 
 .channel-program-timer .input-group{
     float: left;
-    width: 287px;
+    width: 271px;
     height: 28px;
+    margin-top: 7px;
+    margin-left: 15px;
 }
 
 
 .channel-program-timer .input-group .input-group-addon{
     font-size: 12px;
-    
+    height: 28px;
 
 }
 
-.channel-program-timer .input-group .input-group-addon{
-    font-size: 12px;
-    
+.channel-program-timer .input-group .form-control{
+    line-height: 28px;
+    height: 28px;
+    padding-right: 0px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 
 }
