--- a/resources/css/pages/layout/list_dialog.css
+++ b/resources/css/pages/layout/list_dialog.css
@@ -1,6 +1,9 @@
 
 #layout-list-dialog.modal-content {
+    position: relative;
+    left: 50%;
     margin: auto;
+    margin-left: -300px;
     width: 600px;
 }
 
