修复弹窗问题

--- a/resources/css/pages/channel/timer.css
+++ b/resources/css/pages/channel/timer.css
@@ -1,6 +1,9 @@
 
 #channel-editor-timer {
+    position: relative;
+    left: 50%;
     margin: auto;
+    margin-left: -300px;
     width: 600px;
 }
 
