频道预览优化，定时器bug修复

--- a/resources/css/pages/layout/list_dialog.css
+++ b/resources/css/pages/layout/list_dialog.css
@@ -32,8 +32,7 @@
     height: 80px;
     width: 100%;
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
+    background: no-repeat center center;
 }
 
 #layout-list-dialog .layout-list>li>span {
