--- a/resources/css/pages/layout/edit.css
+++ b/resources/css/pages/layout/edit.css
@@ -86,8 +86,7 @@
     border: 1px solid #ddd;
     overflow: hidden;
     border-radius: 4px;
-    background-color: #f4f4f4;
-    background-image: url(../../../img/img_grid.png);
+    background: #f4f4f4 url(../../../img/img_grid.png);
 }
 
 #layout-editor-wrapper .layout-editor-widget {
@@ -95,6 +94,7 @@
     display: inline;
     float: right;
     width: 245px;
+    height: calc(100% - 40px);
     padding-right: 15px;
 }
 
@@ -119,8 +119,8 @@
 
 #layout-editor-wrapper .layout-editor-widgets {
     width: 100%;
-    max-height: 10%;
-    overflow-y: hidden
+    height: calc(100% - 160px);
+    overflow-y: auto;
 }
 
 #layout-editor-wrapper .layout-editor-widgets ul {
