--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -54,7 +54,7 @@
             </span>
             <input type="datetime-local" class="form-control" data-field="lifetime_start" step="1" value="<%=lifetime_start%>">
         </div>
-        <label style="float: left; position: relative; top: 10px; left: 8px;">-</label>
+        <p style="float: left; position: relative; top: 10px; left: 8px;">-</p>
         <div class="input-group">
             <span class="input-group-addon" title="失效时间">
                 <i class="fa fa-calendar-times-o"></i>
