--- a/resources/css/pages/layout/list_dialog.css
+++ b/resources/css/pages/layout/list_dialog.css
@@ -35,7 +35,8 @@
     height: 80px;
     width: 100%;
     background-size: contain;
-    background: no-repeat center center;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #layout-list-dialog .layout-list>li>span {
