--- a/WEB-INF/templates/channel_edit_timer.html
+++ b/WEB-INF/templates/channel_edit_timer.html
@@ -3,26 +3,30 @@
         <button type="button" class="close btn-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
         </button>
-        <h4 class="modal-title">设置定时</h4>
+        <h4 class="modal-title">
+            定时触发
+        </h4>
     </div>
     <div class="modal-body timer-container">
-        <ul class="granularity-selector">
-            <li>
-                <button data-selector="everyday">每天</button>
-            </li>
-            <li>
-                <button data-selector="day">每周</button>
-            </li>
-            <li>
-                <button data-selector="date">每月</button>
-            </li>
-            <li>
-                <button data-selector="month">每年</button>
-            </li>
-        </ul>
+
+
+        <div class="granularity-selector btn-group" style="">
+            <button class="btn btn-default btn-sm" data-selector="month" style="width: 129px;">每年</button>
+        </div>
+        <i class="fa fa-fw fa-chevron-circle-right" style="position: relative; opacity: 0.5; top: 1px;"></i>
+        <div class="granularity-selector btn-group" style="">
+            <button class="btn btn-default btn-sm" data-selector="date" style="width: 129px;">每月</button>
+            <button class="btn btn-default btn-sm" data-selector="day" style="width: 129px;">每周</button>
+        </div>
+        <i class="fa fa-fw fa-chevron-circle-right" style="position: relative; opacity: 0.5; top: 1px;"></i>
+        <div class="granularity-selector btn-group" style=";">
+            <button class="btn btn-default btn-sm" data-selector="everyday" style="width: 129px;">每天</button>
+        </div>
+
+
         <div class="month-selector">
             <ul>
-                <label>按月选择</label>
+                <!-- <label>按月选择</label> -->
                 <% var numbers = ["一","二","三","四","五","六","七","八","九","十","十一","十二","十三","十四","十五","十六","十七","十八","十九","二十","二十一","二十二","二十三","二十四","二十五","二十六","二十七","二十八","二十九","三十","三十一"]; %>
                 <% for ( var i = 0; i < 12; i++) { %>
                 <li data-id="<%=i+1%>" data-selector="month">
@@ -40,7 +44,7 @@
         </div>
         <div class="date-selector">
             <ul>
-                <label>按天选择</label>
+                <!-- <label>按天选择</label> -->
                 <% for ( var i = 0; i < 31; i++) { %>
                 <li data-id="<%=i+1%>" data-selector="date">
                     <label>
@@ -57,7 +61,7 @@
         </div>
         <div class="day-selector">
             <ul>
-                <label>按天选择</label>
+                <!-- <label>按天选择</label> -->
                 <% for ( var i = 0; i < 7; i++) { %>
                 <li data-id="<%=i+1%>" data-selector="day">
                     <label>
@@ -74,7 +78,7 @@
         </div>
         <div class="time-selector">
             <div class="hour-selector">
-                    <label>小时</label>
+                    <label>第...时</label>
                     <select  class="form-control select2" multiple="multiple" data-selector="hour">
                         <% for ( var i = 0; i < 24; i++) { if (hours.indexOf(i) !== -1) { %>
                         <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
@@ -84,7 +88,7 @@
                     </select>
             </div>
             <div class="minute-selector">
-                    <label>分钟</label>
+                    <label>第...分钟</label>
                     <select class="form-control select2" multiple="multiple" data-selector="minute">
                         <% for ( var i = 0; i < 60; i++) { if (minutes.indexOf(i) !== -1) { %>
                         <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
@@ -94,7 +98,7 @@
                     </select>
             </div>
             <div class="second-selector">
-                <label>秒</label>
+                <label>第...秒</label>
                 <select class="form-control select2" multiple="multiple" data-selector="second">
                     <% for ( var i = 0; i < 60; i++) { if (seconds.indexOf(i) !== -1) { %>
                     <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
