--- a/resources/css/pages/channel/timer.css
+++ b/resources/css/pages/channel/timer.css
@@ -8,7 +8,7 @@
 }
 
 #channel-editor-timer .modal-body {
-    max-height: 400px;
+    
     overflow-y: auto;
 }
 
@@ -47,15 +47,17 @@
 #channel-editor-timer .granularity-month button[data-selector="month"],
 #channel-editor-timer .granularity-day button[data-selector="day"],
 #channel-editor-timer .granularity-date button[data-selector="date"] {
-    background: red;
+    background: #3c8dbc !important;
+    color: white;
+}
 }
 
 #channel-editor-timer .granularity-selector,
 #channel-editor-timer .month-selector ul,
 #channel-editor-timer .date-selector ul,
 #channel-editor-timer .day-selector ul {
-    overflow-x: auto;
-    white-space: nowrap;
+    /*overflow-x: auto;*/
+    /*white-space: nowrap;*/
     padding: 10px 0;
 }
 
