时钟预览和天气预览

--- a/WEB-INF/templates/layout_table_row.html
+++ b/WEB-INF/templates/layout_table_row.html
@@ -4,6 +4,7 @@
     <td>宽:<%=width%></td>
     <td>高:<%=height%></td>
     <td>背景色:<%=background_color%></td>
-    <td>上传时间:<%=create_time%></td>
+    <td>创建人:<%=operator%></td>
+    <td>创建时间:<%=create_time%></td>
     <!-- <td>编辑</td> -->
 </tr>
