定时器更新

--- a/WEB-INF/templates/channel_edit_timer.html
+++ b/WEB-INF/templates/channel_edit_timer.html
@@ -11,16 +11,10 @@
 
 
         <div class="granularity-selector btn-group" style="">
-            <button class="btn btn-default btn-sm" data-selector="month" style="width: 129px;">每年</button>
-        </div>
-        <i class="fa fa-fw fa-chevron-circle-right" style="position: relative; opacity: 0.5; top: 1px;"></i>
-        <div class="granularity-selector btn-group" style="">
-            <button class="btn btn-default btn-sm" data-selector="date" style="width: 129px;">每月</button>
-            <button class="btn btn-default btn-sm" data-selector="day" style="width: 129px;">每周</button>
-        </div>
-        <i class="fa fa-fw fa-chevron-circle-right" style="position: relative; opacity: 0.5; top: 1px;"></i>
-        <div class="granularity-selector btn-group" style=";">
-            <button class="btn btn-default btn-sm" data-selector="everyday" style="width: 129px;">每天</button>
+            <button class="btn btn-default btn-sm" data-selector="month" style="width: 143px;">年</button>
+            <button class="btn btn-default btn-sm" data-selector="date" style="width: 143px;">月</button>
+            <button class="btn btn-default btn-sm" data-selector="day" style="width: 143px;">周</button>
+            <button class="btn btn-default btn-sm" data-selector="everyday" style="width: 143px;">天</button>
         </div>
 
 
