--- a/resources/css/pages/channel/timer.css
+++ b/resources/css/pages/channel/timer.css
@@ -44,12 +44,12 @@
 }
 
 #channel-editor-timer .granularity-everyday button[data-selector="everyday"],
-#channel-editor-timer .granularity-month button[data-selector="month"],
-#channel-editor-timer .granularity-day button[data-selector="day"],
-#channel-editor-timer .granularity-date button[data-selector="date"] {
+#channel-editor-timer .granularity-day button[data-selector="day"],#channel-editor-timer .granularity-day button[data-selector="everyday"],
+#channel-editor-timer .granularity-date button[data-selector="date"],#channel-editor-timer .granularity-date button[data-selector="everyday"],
+#channel-editor-timer .granularity-month button[data-selector="month"],#channel-editor-timer .granularity-month button[data-selector="date"],#channel-editor-timer .granularity-month button[data-selector="everyday"]{
     background: #3c8dbc !important;
     color: white;
-}
+
 }
 
 #channel-editor-timer .granularity-selector,
