--- a/WEB-INF/templates/channel_edit_timer.html
+++ b/WEB-INF/templates/channel_edit_timer.html
@@ -19,11 +19,12 @@
 
 
         <div class="month-selector">
-            <ul>
+            <label>每年第...月</label>
+            <ul style="padding:0;">
                 <!-- <label>按月选择</label> -->
                 <% var numbers = ["一","二","三","四","五","六","七","八","九","十","十一","十二","十三","十四","十五","十六","十七","十八","十九","二十","二十一","二十二","二十三","二十四","二十五","二十六","二十七","二十八","二十九","三十","三十一"]; %>
                 <% for ( var i = 0; i < 12; i++) { %>
-                <li data-id="<%=i+1%>" data-selector="month">
+                <li data-id="<%=i+1%>" data-selector="month" style="width: 80px; text-indent:8px; ">
                     <label>
                         <% if (months.indexOf(i+1) !== -1) { %>
                         <input type="checkbox" checked>
@@ -37,10 +38,11 @@
             </ul>
         </div>
         <div class="date-selector">
-            <ul>
+            <label>每月第...天</label>
+            <ul style="padding:0;">
                 <!-- <label>按天选择</label> -->
                 <% for ( var i = 0; i < 31; i++) { %>
-                <li data-id="<%=i+1%>" data-selector="date">
+                <li data-id="<%=i+1%>" data-selector="date" style="width: 50px; text-align: center;">
                     <label>
                         <% if (dates.indexOf(i+1) !== -1) {%>
                         <input type="checkbox" checked >
@@ -54,11 +56,13 @@
             </ul>
         </div>
         <div class="day-selector">
-            <ul>
+            <label>每周第...天</label>
+            <br>
+            <ul style="padding: 0">
                 <!-- <label>按天选择</label> -->
                 <% for ( var i = 0; i < 7; i++) { %>
                 <li data-id="<%=i+1%>" data-selector="day">
-                    <label>
+                    <label style="width: 76px; text-align: center;">
                         <% if (days.indexOf(i+1) !== -1) {%>
                         <input type="checkbox" checked>
                         <% } else { %>
@@ -70,9 +74,9 @@
                 <% } %>
             </ul>
         </div>
-        <div class="time-selector">
-            <div class="hour-selector">
-                    <label>第...时</label>
+        <div class="time-selector" >
+            <div class="hour-selector"  style="margin-bottom: 15px;">
+                    <label>每天第...小时</label>
                     <select  class="form-control select2" multiple="multiple" data-selector="hour">
                         <% for ( var i = 0; i < 24; i++) { if (hours.indexOf(i) !== -1) { %>
                         <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
@@ -81,8 +85,8 @@
                         <% }} %>
                     </select>
             </div>
-            <div class="minute-selector">
-                    <label>第...分钟</label>
+            <div class="minute-selector" style="margin-bottom: 15px;">
+                    <label>每小时第...分钟</label>
                     <select class="form-control select2" multiple="multiple" data-selector="minute">
                         <% for ( var i = 0; i < 60; i++) { if (minutes.indexOf(i) !== -1) { %>
                         <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
@@ -91,8 +95,8 @@
                         <% }} %>
                     </select>
             </div>
-            <div class="second-selector">
-                <label>第...秒</label>
+            <div class="second-selector" style="margin-bottom: 15px;">
+                <label>每分钟第...秒</label>
                 <select class="form-control select2" multiple="multiple" data-selector="second">
                     <% for ( var i = 0; i < 60; i++) { if (seconds.indexOf(i) !== -1) { %>
                     <option value="<%=i%>" selected="selected"><%=(i < 10) ? '0' + i : i%></option>
