--- a/WEB-INF/templates/channel_edit_timer.html
+++ b/WEB-INF/templates/channel_edit_timer.html
@@ -19,7 +19,7 @@
 
 
         <div class="month-selector">
-            <label>每年第...月</label>
+            <label>每年...月</label>
             <ul style="padding:0;">
                 <!-- <label>按月选择</label> -->
                 <% var numbers = ["一","二","三","四","五","六","七","八","九","十","十一","十二","十三","十四","十五","十六","十七","十八","十九","二十","二十一","二十二","二十三","二十四","二十五","二十六","二十七","二十八","二十九","三十","三十一"]; %>
@@ -56,7 +56,7 @@
             </ul>
         </div>
         <div class="day-selector">
-            <label>每周第...天</label>
+            <label>每周...</label>
             <br>
             <ul style="padding: 0">
                 <!-- <label>按天选择</label> -->
