--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -298,7 +298,7 @@ a {
 }
 
 .mtrC_datetime {
-    width: calc(100% - 15px);
+    width: calc(100% - 25px);
     margin: auto;
     margin-left: 12px;
     display: inline-table;
@@ -306,11 +306,16 @@ a {
     border: 1px solid #ddd;
     border-radius: 3px;
     margin-top: 0px;
+    min-height: 0;
 }
 
 .info-box-content{
   margin-left: 30px;
   margin-top:-2px;
+}
+
+.info-box-content .info-box-number{
+  text-align: center;
 }
 
 /*资源选择页面*/
