布局改成模版，模板改成模版

--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -96,7 +96,7 @@
 <div class="channel-program-body">
     <div class="channel-program-layout">
         <div class="channel-program-layout-header">
-            <span class="channel-program-layout-header-info">布局:<%=layout.name%></span>
+            <span class="channel-program-layout-header-info">模版:<%=layout.name%></span>
             <span class="channel-program-layout-header-info">宽:<%=layout.width%></span>
             <span  class="channel-program-layout-header-info">高:<%=layout.height%></span>
 
