--- a/WEB-INF/templates/layout_edit_main.html
+++ b/WEB-INF/templates/layout_edit_main.html
@@ -3,7 +3,7 @@
 
         <button type="button" class="header-button-left glyphicon glyphicon-chevron-left btn-layout-editor-back"></button>
 		
-        <h1 class="header-title">编辑模板</h1>
+        <h1 class="header-title">编辑模版</h1>
         <!-- <button type="button" class="header-button-right glyphicon glyphicon-floppy-disk">保存</button> -->
 
     </div>
