--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -1,16 +1,16 @@
 <section class="content-header">
-	<h1>节目模板</h1>
-	<small class="tips" style="position: absolute; top:22px; right: 16px; font-size: 12px;"><i class="fa fa-info-circle"></i>&nbsp使用模板可以制作强大的分屏节目，但需要预先将它们做好</small>
+	<h1>节目模版</h1>
+	<small class="tips" style="position: absolute; top:22px; right: 16px; font-size: 12px;"><i class="fa fa-info-circle"></i>&nbsp使用模版可以制作强大的分屏节目，但需要预先将它们做好</small>
 	
 </section>
 <section class="content">
 	<div class="box">
 		<div class="box-header with-border">
-            <h3 id="mtrLisTitle" class="box-title">布局</h3>
+            <h3 id="mtrLisTitle" class="box-title">模版列表</h3>
 
             <div class="box-tools pull-right">
                 <div class="has-feedback">
-                    <input id="channel-list-search" type="text" class="form-control input-sm" placeholder="搜索布局">
+                    <input id="channel-list-search" type="text" class="form-control input-sm" placeholder="搜索模版">
                     <span class="glyphicon glyphicon-search form-control-feedback"></span>
                 </div>
             </div>
@@ -21,8 +21,8 @@
 			<!-- Check all button -->
 			<div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i></button>
-				<button type="button" class="btn btn-default btn-sm btn-delete">删除布局</button>
-				<a href="#layout/edit" class="btn btn-default btn-sm btn-add-layout">添加布局</a>
+				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
+				<a href="#layout/edit" class="btn btn-default btn-sm btn-add-layout">添加</a>
 			</div>
 			<!-- <div class="has-feedback">
 					<input type="text" class="form-control">
