--- a/WEB-INF/templates/layout_list_dialog.html
+++ b/WEB-INF/templates/layout_list_dialog.html
@@ -3,11 +3,11 @@
         <button type="button" class="btn btn-close close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
         </button>
-        <h3 class="modal-title">选择布局</h3>
+        <h3 class="modal-title">选择模版</h3>
     </div>
     <div class="modal-body">
         <div class="has-feedback box-tools pull-right">
-            <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索布局">
+            <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索模版">
             <span class="glyphicon glyphicon-search form-control-feedback">
             </span>
         </div>
