添加节目预览

--- a/WEB-INF/templates/channel_edit_program_list_item.html
+++ b/WEB-INF/templates/channel_edit_program_list_item.html
@@ -1,3 +1,4 @@
 <li class="program-list-item" data-id="<%=id%>">
-    <div class="program-list-item-title"><%=name%></div>
+    <div style="<%=backgroundStyle%>"></div>
+    <span><%=name%></span>
 </li>
