--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -43,8 +43,8 @@
 
 #channel-editor-wrapper .channel-editor-footer {}
 
-#channel-editor-wrapper ul>li.selected {
-    border-color: red;
+#channel-editor-wrapper ul>li.selected div{
+    border: solid 3px rgb(45,155,255);
 }
 
 #channel-editor-wrapper .channel-program-header {
@@ -191,33 +191,41 @@
 .program-list-item{
     position: relative;
     list-style: none;
-    height: 120px;
+    width: calc(100% - 30px);
     border-bottom: 1px solid #f4f4f4;
-    margin: 15px 15px 15px 15px;
+    margin: 15px 15px 30px 15px;
     background: white;
     z-index: 1;
+    text-align: center;
+    overflow: hidden;
+    display: table;
+    padding-bottom: 15px;
 }
 
-.program-list-item {
-    text-align: center;
-    margin: 10px 0;
-    height: 140px;
+.program-list-item:nth-of-type(1){
+    margin-bottom: 0;
+    border-bottom: none;
 }
+
 
 .program-list-item>div {
     width: 200px;
     height: 120px;
     margin: 0 auto;
+    /*box-shadow: 0px 1px 6px 3px rgba(0,0,0,.22)*/
 }
 
-.program-list-item>span {  }
+.program-list-item>span {
+    float: left;
+    width: 100%;
+    margin-top: 14px;
+}
 
 .program-list-item-title{
-    position: absolute;
-    bottom: 7px;
+    position: relative;
+    float: left;
     width: 100%;
-    text-align: center;
-
+    margin-top: 15px;
 }
 
 #channel-editor-wrapper .channel-program-list{
