--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -4,7 +4,7 @@
 	
 </section>
 <section class="content">
-	<div class="box">
+	<div class="box box-primary">
 		<div class="box-header with-border">
             <h3 id="mtrLisTitle" class="box-title">模版列表</h3>
 
@@ -21,8 +21,12 @@
 			<!-- Check all button -->
 			<div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i></button>
+			</div>
+            <div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
-				<a href="#layout/edit" class="btn btn-default btn-sm btn-add-layout">添加</a>
+			</div>
+            <div class="btn-group">
+				<a href="#layout/edit" class="btn btn-primary btn-sm btn-add-layout">添加模板</a>
 			</div>
 			<!-- <div class="has-feedback">
 					<input type="text" class="form-control">
