添加节目时长输入框类

--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -80,7 +80,7 @@
             <span class="input-group-addon"  title="播放时长">
                 <i class="glyphicon glyphicon-time"></i>
             </span>
-            <input type="number" class="form-control"  data-field="duration" value="<%=duration%>">
+            <input type="number" class="form-control program-duration"  data-field="duration" value="<%=duration%>">
             <span class="input-group-addon"  title="播放时长">
                 秒
             </span>
