--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -77,11 +77,7 @@
             <span class="input-group-addon"  title="播放时长">
                 <i class="glyphicon glyphicon-time"></i>
             </span>
-            <input type="text" class="form-control program-duration" data-field="duration-text" value="<%=duration_text%>">
-            <input type="number" class="program-duration-hidden" style="display: none" data-field="duration" value="<%=duration%>">
-            <!--<span class="input-group-addon"  title="播放时长">
-                秒
-            </span>-->
+            <div class="program-duration-container"></div>
         </div>
 
 
