--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -139,7 +139,7 @@
 #channel-editor-wrapper .timed-program .channel-editor-program-trigger {
     display: inherit;
     float: left;
-    width: calc(100% - 190px);
+    width: calc(100% - 605px);
 }
 
 #channel-editor-wrapper .percent-channel .channel-editor-program-count {
@@ -273,15 +273,38 @@
     
 }
 
-
-
-
 .channel-program-timer.timed-program p{
     display: none;
 }
 
-.channel-program-timer.timed-program .input-group:nth-of-type(2),.channel-program-timer.timed-program .input-group:nth-of-type(3){
+.channel-program-timer .input-group:nth-of-type(1),
+.channel-program-timer .input-group:nth-of-type(2) {
+    width: 100px;
+}
+
+.channel-program-timer .input-group:nth-of-type(1),
+.channel-program-timer .input-group:nth-of-type(2),
+.channel-program-timer .input-group:nth-of-type(7) {
     display: none;
+}
+
+.channel-program-timer.timed-program .input-group:nth-of-type(4),
+.channel-program-timer.timed-program .input-group:nth-of-type(5) {
+    display: none;
+}
+
+.channel-program-timer.timed-program .input-group:nth-of-type(1),
+.channel-program-timer.timed-program .input-group:nth-of-type(2) {
+    display: table;
+}
+
+.channel-program-timer.percent-channel .input-group:nth-of-type(7) {
+    display: table;
+}
+
+.channel-program-timer.percent-channel .input-group:nth-of-type(4),
+.channel-program-timer.percent-channel .input-group:nth-of-type(5) {
+    width: calc(50% - 162px);
 }
 
 
@@ -305,7 +328,6 @@
     padding-right: 0px;
     padding-top: 2px;
     padding-bottom: 3px;
-
 }
 
 #widget_attribute label{
