更新定时器样式

--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -38,7 +38,7 @@
 
 
             <!-- /btn-group -->
-            <label type="text" class="form-control" style="width: calc(100% - 88px); height: 30px; overflow: hidden; float: right; display: inline;">
+            <label type="text" class="form-control" style="width: calc(100% - 88px); height: 30px; overflow: hidden; float: right; display: inline; line-height: 25px;">
                 <label class="timer-field timer-field-date">
                     <span></span>
                 </label>
