--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -129,9 +129,19 @@ a {
     width: 1920px;
 }
 
-/*全屏弹窗*/
+/*全屏弹窗层1*/
 #cover_area {
     z-index: 2008;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    top: 0px;
+}
+/*全屏弹窗层2*/
+#cover_area2 {
+    z-index: 2009;
     position: fixed;
     width: 100%;
     height: 100%;
