2016-05-24 陈晓斌 添加节目的BUG

--- a/WEB-INF/templates/layout_list_dialog.html
+++ b/WEB-INF/templates/layout_list_dialog.html
@@ -5,11 +5,12 @@
         </button>
         <h3 class="modal-title">选择模版</h3>
     </div>
-    <div class="modal-body">
-        <div class="has-feedback box-tools pull-right">
-            <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索模版">
-            <span class="glyphicon glyphicon-search form-control-feedback">
-            </span>
+    <div>
+        <div class="box-header with-border">
+            <div class="has-feedback pull-right">
+                <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索模版">
+                <span class="glyphicon glyphicon-search form-control-feedback"></span>
+            </div>
         </div>
         <ul class="layout-list">
         </ul>
