--- a/resources/css/pages/layout/list_dialog.css
+++ b/resources/css/pages/layout/list_dialog.css
@@ -29,7 +29,7 @@
     line-height: 80px;
     text-align: center;
     cursor: pointer;
-    margin: 10px 15px;
+    margin: 10px 0px 10px 31px;
 }
 
 #layout-list-dialog .layout-list>li>div {
