2016-06-0 陈晓斌 布局编辑页面里天哥保存并推出按钮

--- a/WEB-INF/templates/layout_edit_main.html
+++ b/WEB-INF/templates/layout_edit_main.html
@@ -24,7 +24,8 @@
                         <ul class="layout-editor-properties">
                             
                         </ul>
-                        <button type="button" class=" btn  btn-default btn-layout-editor-exit">取消编辑</button>
+                        <button type="button" class=" btn  btn-default btn-layout-editor-exit">退出编辑</button>
+                        <button type="button" class=" btn  btn-primary btn-layout-editor-saveExit">保存并退出</button>
                         <button type="button" class=" btn  btn-primary btn-layout-editor-save">保存</button>
                     </div>
                     
