--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -120,10 +120,32 @@ a {
 }
 
 /*login页面*/
+.login-box {
+    position: absolute;
+    margin-left: -180px;
+    left: 50%;
+    margin-top: 7%;
+}
+
+.login-logo {
+    color: white;
+    margin-bottom: 12px;
+}
+
+.login-box-body {
+    background-color: rgba(255,255,255,.85);
+}
+
+.login-box-body > h3 {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
 #error_m {
     display: block;
     margin-top: 10px;
     color: #3c8dbc;
+    text-align: center;
 }
 
 #AutoComplete {
@@ -159,6 +181,10 @@ a {
     left: 50%;
     margin-left: -960px;
     width: 1920px;
+}
+
+#l_version {
+    color: white;
 }
 
 /*全屏弹窗层1*/
