--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -133,13 +133,13 @@ a {
 }
 
 .login-box > .login-logo > a {
-    cursor:default;
+    cursor: default;
     color: white;
     font-size: 36px;
 }
 
 .login-box-body {
-    background-color: rgba(255,255,255,.85);
+    background-color: rgba(255, 255, 255, .85);
 }
 
 .login-box-body > h3 {
