--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -215,6 +215,17 @@ a {
     top: 0px;
 }
 
+/*预览层*/
+#cover_area_preview {
+    z-index: 2010;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    top: 0px;
+}
+
 /*终端列表页面*/
 #term_list small {
     display: inline-block;
