--- a/WEB-INF/templates/layout_edit_main.html
+++ b/WEB-INF/templates/layout_edit_main.html
@@ -34,36 +34,39 @@
 
                         <!-- toolbar -->
                         <div class="layout-editor-toolbar">
-                            <label>&nbsp工具栏</label>
+                            <label style="margin-left: 20px">工具栏</label>
                             
-                            <div class="div-line-i" style="width: 76px;"></div>
+                            <div class="div-line-i" style="width: 85px;"></div>
                             <div class="btn-group-vertical">
                                 <button data-widget-id="video" class="btn btn-default btn-add-widget">
-                                    <i class="glyphicon glyphicon glyphicon-film"></i>&nbsp&nbsp视频
+                                    <i class="glyphicon glyphicon glyphicon-film"></i>&nbsp&nbsp&nbsp视频&nbsp
                                 </button>
                                 <button data-widget-id="image" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-picture"></i>&nbsp&nbsp图片
+                                    <i class="glyphicon glyphicon-picture"></i>&nbsp&nbsp&nbsp图片&nbsp
                                 </button>
                                 <button data-widget-id="html" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-font"></i>&nbsp&nbsp文本
+                                    <i class="glyphicon glyphicon-font"></i>&nbsp&nbsp&nbsp文本&nbsp
                                 </button>
                                 <button data-widget-id="clock" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-time"></i>&nbsp&nbsp时钟
+                                    <i class="glyphicon glyphicon-time"></i>&nbsp&nbsp&nbsp时钟&nbsp
                                 </button>
                                 <button data-widget-id="weather" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-cloud"></i>&nbsp&nbsp天气
+                                    <i class="glyphicon glyphicon-cloud"></i>&nbsp&nbsp&nbsp天气&nbsp
+                                </button>
+                                <button data-widget-id="office" class="btn btn-default  btn-add-widget">
+                                    <i class="glyphicon glyphicon-duplicate"></i>&nbsp&nbspOffice
                                 </button>
                             </div>
 
                             <div class="btn-group-vertical" style="margin-top: 15px;">
                                 <button data-widget-id="audio" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-music"></i>&nbsp&nbsp音乐
+                                    <i class="glyphicon glyphicon-music"></i>&nbsp&nbsp&nbsp音乐&nbsp
                                 </button>
                             </div>
 
                             <div class="btn-group-vertical" style="margin-top: 15px;">
                                 <button class="btn btn-default btn-layout-editor-delete-widget">
-                                    <i class="glyphicon glyphicon-trash"></i>&nbsp&nbsp删除
+                                    <i class="glyphicon glyphicon-trash"></i>&nbsp&nbsp&nbsp删除&nbsp
                                 </button>
                             </div>
                         </div>
