--- a/WEB-INF/templates/layout_edit_main.html
+++ b/WEB-INF/templates/layout_edit_main.html
@@ -54,7 +54,7 @@
                                     <i class="glyphicon glyphicon-cloud"></i>&nbsp&nbsp&nbsp天气&nbsp
                                 </button>
                                 <button data-widget-id="office" class="btn btn-default  btn-add-widget">
-                                    <i class="glyphicon glyphicon-duplicate"></i>&nbsp&nbspOffice
+                                    <i class="glyphicon glyphicon-file"></i>&nbsp&nbspOffice
                                 </button>
                             </div>
 
