--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -1,3 +1,10 @@
+#bg_img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 /*font*/
 body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, '等线', '微软雅黑', sans-serif !important;
@@ -142,7 +149,7 @@ a {
     background-color: rgba(255, 255, 255, .85);
 }
 
-.login-box-body > h3 {
+.login-box-body h3 {
     margin-bottom: 30px;
     text-align: center;
 }
