--- a/resources/templates/layout_table_row.html
+++ b/resources/templates/layout_table_row.html
@@ -5,6 +5,6 @@
     <!--<td><%=height%></td>-->
     <!--<td>背景色:<%=background_color%></td>-->
     <td class="mod_user_center"><%=operator%></td>
-    <td class="mod_create_time_center"><%=create_time%></td>
+    <td class="mod_create_time_center  create-time"><%=create_time%></td>
     <!-- <td>编辑</td> -->
 </tr>
