--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -211,6 +211,71 @@ a {
     color: white;
 }
 
+/*index頁面*/
+.box-menu a {
+    color: #b8c7ce;
+}
+
+.box-index-menu, .box-index-menu > li.header {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.box-index-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.box-index-menu > li {
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+
+.box-index-menu > li:hover > a, .box-index-menu > li.active > a {
+    color: #fff;
+    background: #1e282c;
+    border-left-color: #3c8dbc;
+}
+
+.box-index-menu > li > a {
+    border-left: 3px solid transparent;
+    padding: 12px 5px 12px 15px;
+    display: block;
+}
+
+.box-index-menu > li > .menutree-menu {
+    margin: 0 1px;
+    background: #2c3b41;
+}
+
+.box-index-menu > li  > .menutree-menu > li :hover >a, .box-index-menu > li  > .menutree-menu > li.active >a {
+    color: #fff;
+}
+
+.box-index-menu li.active > .menutree-menu {
+    display: block;
+}
+
+.box-index-menu .menutree-menu {
+    display: none;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-left: 5px;
+}
+
+.box-index-menu .menutree-menu > li > a {
+    padding: 5px 5px 5px 22px;
+    display: block;
+    font-size: 14px;
+}
+
+.box-index-menu .menutree-menu {
+    display: block;
+}
+
 /*全屏弹窗层1*/
 #cover_area {
     z-index: 2008;
@@ -385,7 +450,7 @@ a {
     border-radius: 3px;
     font-size: 18px;
     padding: 5px;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     color: white;
 }
 
@@ -396,7 +461,7 @@ a {
 #currentPage {
     width: 100px;
     margin: 0 auto;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 3px;
 }
 
@@ -1185,7 +1250,6 @@ a {
     margin-right: 0;
     margin-left: 0;
 }
-
 
 .create-time {
     width: 180px;
